--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
-title:            Site Title
-description:      Describe your website here.
+title:            Blgsyr ||  Elktrnk || Yzlm || ruby
+description:      computer software ruby rails linux ...
 disqus_shortname: 
 #Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              http://haslan03.com
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           haslan03
   avatar:         avatar.jpg
-  bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
+  bio:            "bilgisayara hic  bulasmamayi dileyen bir kisiyim"
   email:          you@email.com
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        
+  twitter:        @haslan144
   facebook:       
-  github:         
+  github:         aslan144@github.com
   stackexchange:  
   linkedin:       
   instagram:      
@@ -34,11 +34,11 @@ bing_verify:
 # Links to include in top navigation
 # For external links add external: true
 links:
-  - title: Theme Setup
+  - title: Projects
     url: /theme-setup
-  - title: External Link
-    url: http://mademistakes.com
-    external: true
+  - title: Links
+    url: /links
+    
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/New_York
