--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ owner:
   bio:            "bilgisayara hic  bulasmamayi dileyen bir kisiyim"
   email:          you@email.com
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        @haslan144
+  twitter:        haslan144
   facebook:       
   github:         aslan144@github.com
   stackexchange:  
